--- a/gb/21/5/21/n12964772.md
+++ b/gb/21/5/21/n12964772.md
@@ -1,6 +1,6 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/cknfwu3583/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/cknfwu3583/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/cknfwu3583/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/cknfwu3583/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/cknfwu3583/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/cknfwu3583/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/cknfwu3583/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/cknfwu3583/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/cknfwu3583/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/cknfwu3583/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/cknfwu3583/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/cknfwu3583/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/cknfwu3583/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/cknfwu3583/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/cknfwu3583/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/cknfwu3583/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/cknfwu3583/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/cknfwu3583/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/cknfwu3583/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/cknfwu3583/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/cknfwu3583/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/cknfwu3583/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/cknfwu3583/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/cknfwu3583/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/cknfwu3583/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/cknfwu3583/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/cknfwu3583/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/cknfwu3583/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/cknfwu3583/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/cknfwu3583/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/cknfwu3583/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/cknfwu3583/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/cknfwu3583/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/cknfwu3583/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/cknfwu3583/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/cknfwu3583/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/cknfwu3583/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/cknfwu3583/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/cknfwu3583/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/cknfwu3583/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/cknfwu3583/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/cknfwu3583/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/cknfwu3583/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/cknfwu3583/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/cknfwu3583/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/cknfwu3583/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/cknfwu3583/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>“0与1”所衍生出来的故事</h2>
 
 <h6></h6>
@@ -67,7 +67,7 @@
 <p>因为对“逻辑设计”兴趣浓厚，我常去黄教授的办公室与他讨论一些问题，承黄教授厚爱，招揽我于课余时帮忙（还送了我一个学分），在他自己设计的一个8位数字计算器计划中，将已列表（Truth Table）之逻辑程序，转换成逻辑线路（Logic Circuit），加深了我对“逻辑设计”实际运作（Hands-on）之了解，对我日后在美国之求学与就业，都有着莫大的助益。</p>
 <p>搞“逻辑设计”还需要有一个必备之工具，那就是在十九世纪中，一位英国数学家布尔﹝George Boole﹞，以“二进位数学”为基础而发展出来的独门“布尔氏代数”（Boolean Algebra）。“布尔氏代数”虽然名为“代数”，其实与我们中学时代学的代数完全无关，好像还比较简单易懂一些。</p>
 <p>当然，“逻辑设计”只是一般数位产品设计三段步骤之“中段”而已，得靠之前的系统设计（System Design）制定产品的规格，在“逻辑设计”之后，还要有电路设计（Circuit Design），产品之“雏型”才逐渐浮现。</p>
-<p>我十分幸运，“逻辑设计”后之“电路设计”，在我1972年就业时，已大致简化成如何将各厂商（如<ahref="https://github.com/cknfwu3583/djy/blob/master/gb/tag/%E5%BE%B7%E5%B7%9E.md#1">德州</a>仪器公司、RCA、英特尔等）的数位积体电路“拼凑”起来，不必再费神去计算电路之精确数值。</p>
+<p>我十分幸运，“逻辑设计”后之“电路设计”，在我1972年就业时，已大致简化成如何将各厂商（如<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%BE%B7%E5%B7%9E.md#1">德州</a>仪器公司、RCA、英特尔等）的数位积体电路“拼凑”起来，不必再费神去计算电路之精确数值。</p>
 <p>我的大学﹝成大电机系﹞同窗，就有好几位是搞积体电路设计的，其他涉足电子材料研究与制造过程的也不少，凭良心说，在我眼光中，他们才是真正的科研高手，我有点儿像是在“坐享其成”，只是用他们绞尽脑汁所产生的高科技半导体成品，去搞“简单”的数位设计而已。</p>
 <p>当然，同窗之中也有进入名为电脑科学（Computer Science）领域的。严格说来，电脑科学是俗称“软体”的独门科系，与搞“硬体”的“逻辑设计”及“电路设计”等完全不同，但它们却是相辅相成的。软体工作者也与“逻辑”脱不了关系，他们工作上使用的“流程图”（Flowchart），就是需要在一大堆1（是）与0（非）之间作选择。</p>
 <p>还记得老一辈的软体工作者，得靠“打卡”与“读卡机”，去与那庞然大物的电脑系统“交往”吗？那“卡片”上有“洞”的位置是“1”，没“洞”的就是“0”。看到没有，世界上所有的数位电脑操作系统，自始至终就都只认识“0”与“1”而已，别的“符号”嘛，一概“六亲不认”。</p>
@@ -135,53 +135,53 @@
 <p>也感谢在中华民国的传统儒家教育体制下，让那公平的“大专联考”造就了我的职业生涯，“身不由己”地随着社会潮流，成为一名脚踏实地的电子工程师，当然不能说是捧着“金饭碗”，但至少是拿了一个不容易被砸破的“铁饭碗”，所以平顺地退休后，还有这份闲情逸致去笔耕、学绘画，享受那人生的夕照岁月。</p>
 <p>走笔至此，突然想起在青少年时期曾鼓励过我“从文”的三位国文老师，他们是王川磊（诚正小学），高仰山（凤山中学）与司修武（高雄中学）先生。感谢他们无私地循循善诱，让我对那每周两小时的“作文”课十分期待。可惜我本身“道行”不够，只能粗浅地“平铺直叙”，写不出什么华丽的文藻，但愿这些年来写的几十篇“草地文学”式杂文，让众恩师们（当然也包括成大电机系的两位教授姚静波与黄本源，与密州大的盖顿教授）的在天之灵，都能感受到我在文字上对他们的区区回馈。</p>
 <p>是的，我与三位国文老师之间，都曾各发生过一些有趣的故事，因为与“0与1”完全无关，只好留待“下回分解”，就“敬请期待”啰！</p>
-<p><strong>【<ahref="https://github.com/cknfwu3583/djy/blob/master/gb/tag/%E8%B0%A2%E8%A1%8C%E6%98%8C.md#1">谢行昌</a>，</strong><strong>2021</strong><strong>年三月完稿于美国<ahref="https://github.com/cknfwu3583/djy/blob/master/gb/tag/%E5%BE%B7%E5%B7%9E.md#1">德州</a>】</strong></p>
+<p><strong>【<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E8%B0%A2%E8%A1%8C%E6%98%8C.md#1">谢行昌</a>，</strong><strong>2021</strong><strong>年三月完稿于美国<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%BE%B7%E5%B7%9E.md#1">德州</a>】</strong></p>
 
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/cknfwu3583/djy/blob/master/gb/16/2/19/n4643503.md#1">山居随笔：简介德州的“山丘之乡”</a></li>
-<li><a href="https://github.com/cknfwu3583/djy/blob/master/gb/16/2/29/n4650871.md#1">老侨达城讲古－－习画记趣</a></li>
-<li><a href="https://github.com/cknfwu3583/djy/blob/master/gb/16/4/15/n7556779.md#1">山居随笔：德州的野花季节</a></li>
-<li><a href="https://github.com/cknfwu3583/djy/blob/master/gb/16/7/1/n8054290.md#1">勒克辛顿号航母和太平洋战争博物馆</a></li>
-<li><a href="https://github.com/cknfwu3583/djy/blob/master/gb/16/8/26/n8238455.md#1">“底特律”的故事</a></li>
-<li><a href="https://github.com/cknfwu3583/djy/blob/master/gb/16/12/1/n8547384.md#1">牛仔队四分卫戴克  一颗闪亮的足坛新星</a></li>
-<li><a href="https://github.com/cknfwu3583/djy/blob/master/gb/18/8/17/n10645258.md#1">“全录(Xerox)”的故事</a></li>
-<li><a href="https://github.com/cknfwu3583/djy/blob/master/gb/20/4/3/n11999777.md#1">从2020美足之季末盛事─“超级杯”谈起</a></li>
-<li><a href="https://github.com/cknfwu3583/djy/blob/master/gb/21/5/18/n12958793.md#1">散文：安详的天堂</a></li>
-<li><a href="https://github.com/cknfwu3583/djy/blob/master/gb/21/5/14/n12950351.md#1">桐花落满地</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/2/19/n4643503.md#1">山居随笔：简介德州的“山丘之乡”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/2/29/n4650871.md#1">老侨达城讲古－－习画记趣</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/4/15/n7556779.md#1">山居随笔：德州的野花季节</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/7/1/n8054290.md#1">勒克辛顿号航母和太平洋战争博物馆</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/26/n8238455.md#1">“底特律”的故事</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/12/1/n8547384.md#1">牛仔队四分卫戴克  一颗闪亮的足坛新星</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/17/n10645258.md#1">“全录(Xerox)”的故事</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/4/3/n11999777.md#1">从2020美足之季末盛事─“超级杯”谈起</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669193.md#1">松街的故事之十三：最后一代“眷村川语”的故事</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/7/n13628796.md#1">散落人间的文字：来福明天要去旅行</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/cknfwu3583/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank">警卫目击活摘器官</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/11/14/n11656265.md#1" target="_blank">杨宁：东德国防部长之选择给中共军方的启示</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/8/5/11/n2112872.md#1" target="_blank">法轮功受难中重建中华价值观</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank">中共的伪火骗局</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/2/2/n11020634.md#1" target="_blank">林辉：与张大千比肩的画坛宗师饮恨而终</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/4/n10688678.md#1" target="_blank">摆脱人生困境 美国女子重拾幸福</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/cknfwu3583/djy/blob/master/gb/21/5/19/n12960167.md#1">男孩捡到疑似小美人鱼的骨骸 吓坏妈妈</a></li>
-<li><a href="https://github.com/cknfwu3583/djy/blob/master/gb/21/5/14/n12950057.md#1">【未解之谜】肉身成佛？慧能真身千年不坏</a></li>
-<li><a href="https://github.com/cknfwu3583/djy/blob/master/gb/21/5/12/n12944071.md#1">【未解之谜】流落人间的金箍棒 印度德里铁柱</a></li>
-<li><a href="https://github.com/cknfwu3583/djy/blob/master/gb/21/4/19/n12891294.md#1">道门出败类 张三丰出手示警</a></li>
-<li><a href="https://github.com/cknfwu3583/djy/blob/master/gb/21/5/18/n12957550.md#1">女子产子后“死亡” 看见过去与未来</a></li>
-<li><a href="https://github.com/cknfwu3583/djy/blob/master/gb/21/5/20/n12963444.md#1">【财商天下】真金还是泡沫？比特币的疯狂</a></li>
-<li><a href="https://github.com/cknfwu3583/djy/blob/master/gb/21/5/19/n12961300.md#1">【探索时分】太平洋定海神针 美救台的第七舰队</a></li>
-<li><a href="https://github.com/cknfwu3583/djy/blob/master/gb/21/5/20/n12964295.md#1">【横河观点】中共CGTN反犹节目 惹恼以色列</a></li>
-<li><a href="https://github.com/cknfwu3583/djy/blob/master/gb/21/5/19/n12959579.md#1">唐凤推简讯实联制5秒搞定 免费且免填个资</a></li>
-<li><a href="https://github.com/cknfwu3583/djy/blob/master/gb/21/5/19/n12961144.md#1">印度疫情惨 恒河飘大量浮尸 警方跨河拉网</a></li>
-<li><a href="https://github.com/cknfwu3583/djy/blob/master/gb/21/5/19/n12960904.md#1">深圳大楼乱晃惊动美领馆 向美国人发警告</a></li>
-<li><a href="https://github.com/cknfwu3583/djy/blob/master/gb/21/5/19/n12961232.md#1">医生父亲台湾前线抗疫 炎亚纶心疼喊话</a></li>
-<li><a href="https://github.com/cknfwu3583/djy/blob/master/gb/21/5/19/n12960010.md#1">《月薪娇妻》新垣结衣与星野源成为真夫妻</a></li>
-<li><a href="https://github.com/cknfwu3583/djy/blob/master/gb/21/5/20/n12962574.md#1">周子瑜拥有罕见手相 命理老师：她有天使气场</a></li>
-<li><a href="https://github.com/cknfwu3583/djy/blob/master/gb/21/5/18/n12958844.md#1">香港歌手黎瑞恩胰脏长肿瘤 不做手术奇迹康复</a></li>
-<li><a href="https://github.com/cknfwu3583/djy/blob/master/gb/21/5/18/n12959029.md#1">梁朝伟林志玲将续前缘 吴宇森筹拍《赤壁》网剧</a></li>
-<li><a href="https://github.com/cknfwu3583/djy/blob/master/gb/21/5/19/n12959656.md#1">台湾确诊激增 日本作家却看好2防疫关键</a></li>
-<li><a href="https://github.com/cknfwu3583/djy/blob/master/gb/21/5/19/n12960167.md#1">男孩捡到疑似小美人鱼的骨骸 吓坏妈妈</a></li>
-<li><a href="https://github.com/cknfwu3583/djy/blob/master/gb/21/5/19/n12960642.md#1">清冠一号治新冠好得快、无副作用？这类人不能吃</a></li>
-<li><a href="https://github.com/cknfwu3583/djy/blob/master/gb/21/5/18/n12957550.md#1">女子产子后“死亡” 看见过去与未来</a></li>
-<li><a href="https://github.com/cknfwu3583/djy/blob/master/gb/21/5/20/n12962633.md#1">超自然研究者：数千英国人穿越 消失在过去</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/21/n13451605.md#1">【百年真相】到底谁是特务？延安整风内幕</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/16/n13649079.md#1">【人生之钥】败家子卖田地卖金玉 结局出人意料</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13679895.md#1">梁锦祥：故宫大门倒等异象频现 人类应反思</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679596.md#1">【远见快评】传普京重大让步 乌克兰中立秘辛</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679393.md#1">【军事热点】美军主导联合军演 在南海轮番展开</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669168.md#1">配F-35C等舰载机 美福特号航母已准备好战斗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674635.md#1">六四领袖被刺杀 FBI盯上中共间谍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676833.md#1">47岁林志玲产后首晒照 获赞“最美妈咪”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678198.md#1">威尔史密斯奥斯卡台上打人 摘影帝后致歉落泪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678918.md#1">大S具俊晔已在台湾完成登记 结婚纪念日选这天</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676987.md#1">威尔?史密斯上台搧颁奖人 杜汶泽一假设引共鸣</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677065.md#1">新筛查方法可查出95%一期胰腺癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/19/n13657423.md#1">吃对了肌肤就漂亮 10大食材为肌肤打底</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674013.md#1">吃奇异果不用削皮 连皮一起吃营养更加倍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676145.md#1">为什么新衣服在穿着之前要先洗涤？</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/cknfwu3583/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/cknfwu3583/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/5/21/n12964772.htm">“0与1”所衍生出来的故事</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/5/21/n12964772.htm">“0与1”所衍生出来的故事</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/cknfwu3583/djy/blob/master/gb/21/5/21/n12964772.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/cknfwu3583/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cknfwu3583/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/cknfwu3583/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/cknfwu3583/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/cknfwu3583/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cknfwu3583/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/cknfwu3583/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cknfwu3583/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/cknfwu3583/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cknfwu3583/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/cknfwu3583/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cknfwu3583/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/cknfwu3583/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cknfwu3583/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/cknfwu3583/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cknfwu3583/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/cknfwu3583/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cknfwu3583/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/cknfwu3583/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cknfwu3583/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/cknfwu3583/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cknfwu3583/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/cknfwu3583/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cknfwu3583/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/cknfwu3583/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cknfwu3583/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/cknfwu3583/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cknfwu3583/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/cknfwu3583/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cknfwu3583/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/cknfwu3583/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cknfwu3583/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/cknfwu3583/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cknfwu3583/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/cknfwu3583/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cknfwu3583/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/cknfwu3583/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cknfwu3583/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/cknfwu3583/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cknfwu3583/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/cknfwu3583/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cknfwu3583/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/cknfwu3583/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cknfwu3583/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/cknfwu3583/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cknfwu3583/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/cknfwu3583/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cknfwu3583/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/21/5/21/n12964772.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
